# polymarket-copy-bot-rust

./: .env.example  .gitignore  Cargo.toml  README.md  setup-daemon.ps1
.cargo/: config.toml
src/: bot.rs  cache.rs  config.rs  leaderboard.rs  logger.rs  main.rs  monitor.rs  positions.rs  risk_manager.rs  trader.rs  types.rs  utils.rs  websocket_monitor.rs
wiki/: index.md  log.md  overview.md
wiki/architecture/: bot-architecture.md  whale-discovery.md
wiki/concepts/: adaptive-risk-tiers.md  order-types.md  signature-types.md  sizing-model.md
wiki/entities/: bot-state.md  config.md  core-types.md  position-tracker.md  risk-manager.md  trade-executor.md  trade-monitor.md  websocket-monitor.md  whale-cache.md
wiki/operations/: setup-guide.md  troubleshooting.md
