[package]
name = "polymarket-copy-bot-rust"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
futures-util = "0.3"
polymarket-client-sdk = { version = "0.4.4", features = ["clob"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"
alloy = "=1.6.3"
alloy-consensus = "=1.6.3"
alloy-consensus-any = "=1.6.3"
alloy-contract = "=1.6.3"
alloy-eips = "=1.6.3"
alloy-json-rpc = "=1.6.3"
alloy-network = "=1.6.3"
alloy-network-primitives = "=1.6.3"
alloy-provider = "=1.6.3"
alloy-rpc-client = "=1.6.3"
alloy-rpc-types = "=1.6.3"
alloy-rpc-types-any = "=1.6.3"
alloy-rpc-types-eth = "=1.6.3"
alloy-serde = "=1.6.3"
alloy-signer = "=1.6.3"
alloy-signer-local = "=1.6.3"
alloy-transport = "=1.6.3"
alloy-transport-http = "=1.6.3"
alloy-tx-macros = "=1.6.3"
ctrlc = "3.4"
